[tool.poetry]
name = "syncsweptsine"
version = "0.2.1"
description = "Synchronized Swept Sine Method according to Nowak et al. 2015."
authors = ["Siegfried Gündert <siegfried.guendert-a-gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">=1.16"
scipy = ">=1.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-assume = "^1.2"
pytest-cov = "^2.7"
sphinx = "=1.8"
sphinx-rtd-theme = "^0.4.3"
numpydoc = "^0.9.1"
matplotlib = "^3.1"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"
