[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncsweptsine"
version = "0.2.1"
description = "Synchronized Swept Sine Method according to Nowak et al. 2015."
authors = [{ name = "Siegfried Gündert", email = "siegfried.guendert@gmail.com" }]
requires-python = "~=3.8"
license = "MPL-2.0"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-assume>=2.4",
    "pytest-cov>=4.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "numpydoc>=1.5",
    "matplotlib>=3.5",
    "pylint~=2.17",
]
